--- a/portfolio.html
+++ b/portfolio.html
@@ -20,35 +20,40 @@
   <body>
     <header class="header">
       <!--Navbar-->
-      <div class="container head">
+      <div class="head-container container">
         <a href="/" class="logo-header"><span class="logo">Web</span>Studio</a>
         <nav class="main-nav">
-          <ul class="site-nav list">
-            <li class="item">
-              <a href="./index.html" class="nav-link link">Студия</a>
+          <ul class="main-nav__list list">
+            <li class="main-nav__item">
+              <a href="./index.html" class="main-nav__link link">Студия</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="nav-link link current"
+            <li class="main-nav__item">
+              <a
+                href="./portfolio.html"
+                class="main-nav__link link main-nav__link--current"
                 >Портфолио</a
               >
             </li>
-            <li class="item">
-              <a href="" class="nav-link link">Контакты</a>
+            <li class="main-nav__item">
+              <a href="" class="main-nav__link link">Контакты</a>
             </li>
           </ul>
         </nav>
         <ul class="header-contacts list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="contact-link mail">
-              <svg width="16px" height="12px">
+          <li class="header-contacts__item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-contacts__link mail"
+            >
+              <svg class="header-contacts__svg" width="16px" height="12px">
                 <use href="./images/icons/icons.svg#icon-envelope"></use>
               </svg>
               <span>info@devstudio.com</span>
             </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="contact-link phone">
-              <svg width="10px" height="16px">
+            <a href="tel:+380961111111" class="header-contacts__link phone">
+              <svg class="header-contacts__svg" width="10px" height="16px">
                 <use href="./images/icons/icons.svg#icon-smartphone"></use>
               </svg>
               <span> +38 096 111 11 11 </span></a
@@ -56,6 +61,7 @@
           </li>
         </ul>
       </div>
+      <!--Header-->
     </header>
     <main class="layout">
       <section class="portfolio-section">
