--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
               >
             </li>
             <li class="main-nav__item">
-              <a href="" class="main-nav__link link">Контакты</a>
+              <a href="#footer" class="main-nav__link link">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -51,7 +51,7 @@
               <span>info@devstudio.com</span>
             </a>
           </li>
-          <li class="item">
+          <li class="header-contacts__item">
             <a href="tel:+380961111111" class="header-contacts__link phone">
               <svg class="header-contacts__svg" width="10px" height="16px">
                 <use href="./images/icons/icons.svg#icon-smartphone"></use>
@@ -66,43 +66,43 @@
     <main class="layout">
       <section class="portfolio-section">
         <div class="container portfolio-container">
-          <h1 class="hidden-heading">Портфолио</h1>
+          <h1 class="section-benefits__title--hidden">Портфолио</h1>
           <ul class="button-list list">
-            <li class="button-item">
+            <li class="button-list__item">
               <button type="button" class="secondary-button button">Все</button>
             </li>
-            <li class="button-item">
+            <li class="button-list__item">
               <button type="button" class="secondary-button button">
                 Веб-сайты
               </button>
             </li>
-            <li class="button-item">
+            <li class="button-list__item">
               <button type="button" class="secondary-button button">
                 Приложения
               </button>
             </li>
-            <li class="button-item">
+            <li class="button-list__item">
               <button type="button" class="secondary-button button">
                 Дизайн
               </button>
             </li>
-            <li class="button-item">
+            <li class="button-list__item">
               <button type="button" class="secondary-button button">
                 Маркетинг
               </button>
             </li>
           </ul>
           <ul class="portfolio-list list">
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/tehnocryack.jpg"
                     alt="технокряк"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -111,22 +111,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Технокряк</h2>
-                  <p class="example-type">Веб-сайт</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">Технокряк</h2>
+                  <p class="portfolio-list__example-type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/neworlean.jpg"
                     alt="Постер New Orlean vs Golden Star"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -136,24 +136,24 @@
                   </div>
                 </div>
 
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="example-type">Дизайн</p>
+                  <p class="portfolio-list__example-type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/seafood.jpg"
                     alt="Ресторан Seafood"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -162,22 +162,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Ресторан Seafood</h2>
-                  <p class="example-type">Приложение</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">Ресторан Seafood</h2>
+                  <p class="portfolio-list__example-type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/headphones.jpg"
                     alt="Проект Prime"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -187,22 +187,22 @@
                   </div>
                 </div>
 
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Проект Prime</h2>
-                  <p class="example-type">Маркетинг</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">Проект Prime</h2>
+                  <p class="portfolio-list__example-type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/boxes.jpg"
                     alt="Проект Boxes"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -211,22 +211,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Проект Boxes</h2>
-                  <p class="example-type">Приложение</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">Проект Boxes</h2>
+                  <p class="portfolio-list__example-type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/inspiration.jpg"
                     alt="Inspiration has no Borders"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -236,22 +236,24 @@
                   </div>
                 </div>
 
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Inspiration has no Borders</h2>
-                  <p class="example-type">Веб-сайт</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="portfolio-list__example-type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/limitededition.jpg"
                     alt="Издание Limited Edition"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -260,22 +262,24 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Издание Limited Edition</h2>
-                  <p class="example-type">Дизайн</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">
+                    Издание Limited Edition
+                  </h2>
+                  <p class="portfolio-list__example-type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/lab.jpg"
                     alt="Проект LAB"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -284,22 +288,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Проект LAB</h2>
-                  <p class="example-type">Маркетинг</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">Проект LAB</h2>
+                  <p class="portfolio-list__example-type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-box">
-              <a href="" class="portfolio-link">
-                <div class="overlay-box">
+            <li class="portfolio-list__item">
+              <a href="" class="portfolio-list__link">
+                <div class="portfolio-list__box">
                   <img
                     src="./images/Portfolio/growingbusiness.jpg"
                     alt="Growing Business"
                     width="370"
-                    class="portfolio-card"
+                    class="portfolio-list__card"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio-list__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -309,9 +313,9 @@
                   </div>
                 </div>
 
-                <div class="portfolio-text">
-                  <h2 class="portfolio-example">Growing Business</h2>
-                  <p class="example-type">Приложение</p>
+                <div class="portfolio-list__text">
+                  <h2 class="portfolio-list__example">Growing Business</h2>
+                  <p class="portfolio-list__example-type">Приложение</p>
                 </div>
               </a>
             </li>
@@ -319,28 +323,30 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-address">
+    <footer class="footer" id="footer">
+      <div class="footer__container container">
+        <div class="contacts-box">
           <a href="/" class="logo-footer"
             ><span class="logo">Web</span>Studio</a
           >
-          <address class="address">
-            <ul class="footer-contacts list">
-              <li class="list-item">
+          <address class="contacts-box__address">
+            <ul class="contacts-box__list list">
+              <li class="contacts-box__item">
                 <a
                   href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000/@50.4265841,30.5361918,17z"
-                  class="address-link"
+                  class="contacts-box__link contacts-box__link-address"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="list-item">
-                <a href="mailto:info@devstudio.com" class="contact-link link"
+              <li class="contacts-box__item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="contacts-box__link link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="list-item">
-                <a href="tel:+380961111111" class="contact-link link"
+              <li class="contacts-box__item">
+                <a href="tel:+380961111111" class="contacts-box__link link"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -348,33 +354,33 @@
           </address>
         </div>
         <div class="footer-social">
-          <h2 class="footer-heading">присоединяйтесь</h2>
-          <ul class="list-social list">
-            <li class="social-item">
-              <a href="" class="studio-social">
-                <svg class="link-instagram" width="20px" height="20px">
+          <h2 class="footer-title">присоединяйтесь</h2>
+          <ul class="footer-social__list list">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__studio">
+                <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="studio-social">
-                <svg class="link-twitter" width="20px" height="20px">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__studio">
+                <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="social-item">
-              <a href="" class="studio-social">
-                <svg class="link-facebook" width="20px" height="20px">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__studio">
+                <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-item">
-              <a href="" class="studio-social">
-                <svg class="link-linkedin" width="20px" height="20px">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__studio">
+                <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -382,20 +388,23 @@
           </ul>
         </div>
         <div class="modal-footer">
-          <h2 class="footer-heading">Подпишитесь на рассылку</h2>
-          <form class="modal-footer">
-            <div class="modal-modal">
+          <h2 class="footer-title">Подпишитесь на рассылку</h2>
+          <form class="modal-footer__form">
+            <div class="modal-footer__box">
               <label class="input-footer">
                 <input
-                  class="footer-email"
+                  class="modal-footer__email"
                   type="email"
                   name="email"
                   placeholder="E-mail"
                 />
               </label>
-              <button type="submit" class="primary-button button">
+              <button
+                type="submit"
+                class="modal-footer__button primary-button button"
+              >
                 Подписаться
-                <svg class="button-svg" width="24px" height="24px">
+                <svg class="modal-footer__svg" width="24px" height="24px">
                   <use href="./images/icons/icons.svg#icon-send"></use>
                 </svg>
               </button>
