mixin placeholder start

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
 
               <div class="modal-form__group-comment">
-                <label class="form-label" for="text">Комментарий</label>
+                <label class="modal-form__label" for="text">Комментарий</label>
                 <textarea
                   class="modal-form__textarea"
                   name="textarea"
@@ -135,7 +135,7 @@
                     <a class="modal-form__link" href="">Условия договора</a></label>
                   </span>
               </div>
-              <button type="submit" class="primary-button button">
+              <button type="submit" class="modal-form__button primary-button button">
                 Отправить
               </button>
             </form>
