--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <header class="header">
       <!--Navbar-->
-          <div class="head-container container">
-        <a href="/" class="logo-header"><span class="logo">Web</span>Studio</a>
+          <div class="header__container container">
+        <a href="/" class="logo logo--header"><span class="logo logo--accent">Web</span>Studio</a>
         <nav class="main-nav">
           <ul class="main-nav__list list">
             <li class="main-nav__item">
@@ -81,39 +81,39 @@
             <p class="backdrop__heading">Оставьте свои данные, мы вам перезвоним</p>
 
 
-            <form class="modal-form">
-              <div class="modal-form__group">
-                <label class="modal-form__label" for="name">Имя</label>
-                <input class="modal-form__input" name="name" type="text" id="name" />
-                <svg class="modal-form__svg" width="18px" height="18px">
+            <form class="form">
+              <div class="form__group">
+                <label class="form__label" for="name">Имя</label>
+                <input class="form__input" name="name" type="text" id="name" />
+                <svg class="form__svg" width="18px" height="18px">
                   <use href="./images/icons/icons.svg#icon-person-modal"></use>
                 </svg>
               </div>
-              <div class="modal-form__group">
-                <label class="modal-form__label" for="tel">Телефон</label>
-                <input class="modal-form__input" name="tel" type="tel" id="tel" />
-                <svg class="modal-form__svg" width="18px" height="18px">
+              <div class="form__group">
+                <label class="form__label" for="tel">Телефон</label>
+                <input class="form__input" name="tel" type="tel" id="tel" />
+                <svg class="form__svg" width="18px" height="18px">
                   <use href="./images/icons/icons.svg#icon-phone-modal"></use>
                 </svg>
               </div>
 
-              <div class="modal-form__group">
-                <label class="modal-form__label" for="email">Почта</label>
+              <div class="form__group">
+                <label class="form__label" for="email">Почта</label>
                 <input
-                  class="modal-form__input"
+                  class="form__input"
                   name="email"
                   type="email"
                   id="email"
                 />
-                <svg class="modal-form__svg" width="18px" height="18px">
+                <svg class="form__svg" width="18px" height="18px">
                   <use href="./images/icons/icons.svg#icon-email-modal"></use>
                 </svg>
               </div>
 
-              <div class="modal-form__group-comment">
-                <label class="modal-form__label" for="text">Комментарий</label>
+              <div class="form__group-comment">
+                <label class="form__label" for="text">Комментарий</label>
                 <textarea
-                  class="modal-form__textarea"
+                  class="form__textarea"
                   name="textarea"
                   id="text"
                   cols="30"
@@ -122,20 +122,20 @@
                 ></textarea>
               </div>
 
-              <div class="modal-form__group-checkbox">
-                <label class="modal-form__agreement" for="agreement">
+              <div class="form__group-checkbox">
+                <label class="form__agreement" for="agreement">
                   <input
-                    class="modal-form__checkbox"
+                    class="form__checkbox"
                     type="checkbox"
                     id="agreement"
                   />
-                  <span class="modal-form__icon"></span>
-                  <span class="modal-form__text">
+                  <span class="form__icon"></span>
+                  <span class="form__text">
                     Соглашаюсь с рассылкой и принимаю
-                    <a class="modal-form__link" href="">Условия договора</a></label>
+                    <a class="form__link" href="">Условия договора</a></label>
                   </span>
               </div>
-              <button type="submit" class="modal-form__button primary-button button">
+              <button type="submit" class="form__button   mary-button button">
                 Отправить
               </button>
             </form>
@@ -444,8 +444,8 @@
     <footer class="footer" id="footer">
       <div class="footer__container container">
         <div class="contacts-box">
-          <a href="/" class="logo-footer"
-            ><span class="logo">Web</span>Studio</a
+          <a href="/" class="logo logo--footer"
+            ><span class="logo logo--accent">Web</span>Studio</a
           >
           <address class="contacts-box__address">
             <ul class="contacts-box__list list">
@@ -470,7 +470,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <h2 class="footer-title">присоединяйтесь</h2>
+          <h2 class="footer__title">присоединяйтесь</h2>
           <ul class="footer-social__list list">
             <li class="footer-social__item">
               <a href="" class="footer-social__studio">
@@ -504,7 +504,7 @@
           </ul>
         </div>
         <div class="modal-footer">
-          <h2 class="footer-title">Подпишитесь на рассылку</h2>
+          <h2 class="footer__title">Подпишитесь на рассылку</h2>
           <form class="modal-footer__form">
             <div class="modal-footer__box">
               <label class="input-footer">
