--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,10 @@
   <body>
     <header class="header">
       <!--Navbar-->
-      <div class="head-container container">
-        <a href="/" class="logo-header"><span class="logo">Web</span>Studio</a>
+      <div class="header__container container">
+        <a href="/" class="logo logo--header"
+          ><span class="logo logo--accent">Web</span>Studio</a
+        >
         <nav class="main-nav">
           <ul class="main-nav__list list">
             <li class="main-nav__item">
@@ -326,8 +328,8 @@
     <footer class="footer" id="footer">
       <div class="footer__container container">
         <div class="contacts-box">
-          <a href="/" class="logo-footer"
-            ><span class="logo">Web</span>Studio</a
+          <a href="/" class="logo logo--footer"
+            ><span class="logo logo--accent">Web</span>Studio</a
           >
           <address class="contacts-box__address">
             <ul class="contacts-box__list list">
@@ -354,7 +356,7 @@
           </address>
         </div>
         <div class="footer-social">
-          <h2 class="footer-title">присоединяйтесь</h2>
+          <h2 class="footer__title">присоединяйтесь</h2>
           <ul class="footer-social__list list">
             <li class="footer-social__item">
               <a href="" class="footer-social__studio">
@@ -388,7 +390,7 @@
           </ul>
         </div>
         <div class="modal-footer">
-          <h2 class="footer-title">Подпишитесь на рассылку</h2>
+          <h2 class="footer__title">Подпишитесь на рассылку</h2>
           <form class="modal-footer__form">
             <div class="modal-footer__box">
               <label class="input-footer">
