--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <a class="form__link" href="">Условия договора</a></label>
                   </span>
               </div>
-              <button type="submit" class="form__button   mary-button button">
+              <button type="submit" class="form__button primary-button button">
                 Отправить
               </button>
             </form>
