--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <header class="header">
       <!--Navbar-->
       <div class="header__container container">
-        <a href="/" class="logo logo--header"
+        <a href="/" class="logo logo--dark"
           ><span class="logo logo--accent">Web</span>Studio</a
         >
         <nav class="main-nav">
@@ -328,7 +328,7 @@
     <footer class="footer" id="footer">
       <div class="footer__container container">
         <div class="contacts-box">
-          <a href="/" class="logo logo--footer"
+          <a href="/" class="logo logo--light"
             ><span class="logo logo--accent">Web</span>Studio</a
           >
           <address class="contacts-box__address">
@@ -357,31 +357,31 @@
         </div>
         <div class="footer-social">
           <h2 class="footer__title">присоединяйтесь</h2>
-          <ul class="footer-social__list list">
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+          <ul class="social-list social-list--footer list">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-linkedin"></use>
                 </svg>
@@ -389,13 +389,13 @@
             </li>
           </ul>
         </div>
-        <div class="modal-footer">
+        <div class="footer-mail">
           <h2 class="footer__title">Подпишитесь на рассылку</h2>
-          <form class="modal-footer__form">
-            <div class="modal-footer__box">
+          <form class="footer-mail__form">
+            <div class="footer-mail__box">
               <label class="input-footer">
                 <input
-                  class="modal-footer__email"
+                  class="footer-mail__email"
                   type="email"
                   name="email"
                   placeholder="E-mail"
@@ -403,10 +403,10 @@
               </label>
               <button
                 type="submit"
-                class="modal-footer__button primary-button button"
+                class="footer-mail__button primary-button button"
               >
                 Подписаться
-                <svg class="modal-footer__svg" width="24px" height="24px">
+                <svg class="footer-mail__svg" width="24px" height="24px">
                   <use href="./images/icons/icons.svg#icon-send"></use>
                 </svg>
               </button>
