--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <!--Navbar-->
           <div class="header__container container">
-        <a href="/" class="logo logo--header"><span class="logo logo--accent">Web</span>Studio</a>
+        <a href="/" class="logo logo--dark"><span class="logo logo--accent">Web</span>Studio</a>
         <nav class="main-nav">
           <ul class="main-nav__list list">
             <li class="main-nav__item">
@@ -78,7 +78,7 @@
         <!--MODAL WINDOW-->
         <div class="backdrop backdrop--is-hidden " data-modal>
           <div class="backdrop__modal">
-            <p class="backdrop__heading">Оставьте свои данные, мы вам перезвоним</p>
+            <p class="backdrop__header">Оставьте свои данные, мы вам перезвоним</p>
 
 
             <form class="form">
@@ -135,7 +135,7 @@
                     <a class="form__link" href="">Условия договора</a></label>
                   </span>
               </div>
-              <button type="submit" class="form__button primary-button button">
+              <button type="submit" class="primary-button primary-button--shadow  button">
                 Отправить
               </button>
             </form>
@@ -271,28 +271,38 @@
                 <h3 class="section-team__name">Игорь Демьяненко</h3>
                 <p class="section-team__position">Product Designer</p>
               </div>
-              <div class="section-team__social-box">
-                <a href="" class="section-team__social">
-                  <svg class="link-instagram" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-twitter" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-facebook" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-linkedin" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+        <ul class="social-list social-list--team list">
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
             </li>
             <li class="section-team__box">
               <img
@@ -305,28 +315,38 @@
                 <h3 class="section-team__name">Ольга Репина</h3>
                 <p class="section-team__position">Frontend Developer</p>
               </div>
-              <div class="section-team__social-box">
-                <a href="" class="section-team__social">
-                  <svg class="link-instagram" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-twitter" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-facebook" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-linkedin" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+        <ul class="social-list social-list--team list">
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
             </li>
             <li class="section-team__box">
               <img
@@ -339,28 +359,38 @@
                 <h3 class="section-team__name">Николай Тарасов</h3>
                 <p class="section-team__position">Marketing</p>
               </div>
-              <div class="section-team__social-box">
-                <a href="" class="section-team__social">
-                  <svg class="link-instagram" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-twitter" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-facebook" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-linkedin" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="social-list social-list--team list">
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
             </li>
             <li class="section-team__box">
               <img
@@ -373,28 +403,41 @@
                 <h3 class="section-team__name">Михаил Ермаков</h3>
                 <p class="section-team__position">UI Designer</p>
               </div>
-              <div class="section-team__social-box">
-                <a href="" class="section-team__social">
-                  <svg class="link-instagram" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-twitter" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-facebook" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="section-team__social">
-                  <svg class="link-linkedin" height="20px" width="20px">
-                    <use href="./images/icons/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+
+
+         <ul class="social-list social-list--team list">
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--team">
+              <a href="" class="social-list__link social-list__link--team">
+                <svg height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+
             </li>
           </ul>
         </div>
@@ -444,7 +487,7 @@
     <footer class="footer" id="footer">
       <div class="footer__container container">
         <div class="contacts-box">
-          <a href="/" class="logo logo--footer"
+          <a href="/" class="logo logo--light"
             ><span class="logo logo--accent">Web</span>Studio</a
           >
           <address class="contacts-box__address">
@@ -471,53 +514,55 @@
         </div>
         <div class="footer-social">
           <h2 class="footer__title">присоединяйтесь</h2>
-          <ul class="footer-social__list list">
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+
+          <ul class="social-list social-list--footer list">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg  height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg  height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
 
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg  height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social__item">
-              <a href="" class="footer-social__studio">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
                 <svg height="20px" width="20px">
                   <use href="./images/icons/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+
         </div>
-        <div class="modal-footer">
+        <div class="footer-mail">
           <h2 class="footer__title">Подпишитесь на рассылку</h2>
-          <form class="modal-footer__form">
-            <div class="modal-footer__box">
+          <form class="footer-mail__form">
+            <div class="footer-mail__box">
               <label class="input-footer">
                 <input
-                  class="modal-footer__email"
+                  class="footer-mail__email"
                   type="email"
                   name="email"
                   placeholder="E-mail"
                 />
               </label>
-              <button type="submit" class="modal-footer__button primary-button button">
+              <button type="submit" class="footer-mail__button primary-button button">
                 Подписаться
-                <svg class="modal-footer__svg" width="24px" height="24px">
+                <svg class="footer-mail__svg" width="24px" height="24px">
                   <use href="./images/icons/icons.svg#icon-send"></use>
                 </svg>
               </button>
@@ -529,3 +574,39 @@
     <script src="./js/modal.js"></script>
   </body>
 </html>
+
+
+
+
+
+          <ul class="social-list social-list--footer list">
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
+                <svg  height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list__item social-list__item--footer">
+              <a href="" class="social-list__link social-list__link--footer">
+                <svg height="20px" width="20px">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
